# clog

./: LICENSE  README.md
demo/: CMakeLists.txt  main.cpp  main.cpp.bak
src/: log.c  log.h  time_helper.h
